# raylib-game-of-life

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: cgltf.h.BE3389371F4EB257.idx  cocoa_init.m.A0A197877AC53CBD.idx  cocoa_joystick.h.1986E8ACF7D60FA0.idx  cocoa_joystick.m.89ED266303092D02.idx  cocoa_monitor.m.4724B8759707572C.idx  cocoa_platform.h.F4B30F480FCAE880.idx  cocoa_time.c.2AC0FBC9501F3D63.idx  cocoa_time.h.70721109F6C48B67.idx  cocoa_window.m.47C98FD0E917C372.idx  config.h.DCABF8E2C15D123D.idx  context.c.D14C7E597DFC378A.idx  dr_mp3.h.38A88872CC2CEFBA.idx  dr_wav.h.B82E9E597F21965B.idx  egl_context.c.4530E70E27283CEC.idx  glad.h.AAB760BE113FE1FF.idx  glfw3.h.7108BC0AC616F8B3.idx  glfw3native.h.38C777C7324CE169.idx  init.c.3BB48D4EC5462458.idx  input.c.CFB31F71CF0DB1B9.idx  internal.h.781F5796532D9898.idx  jar_mod.h.099C8AE0585540DD.idx  jar_xm.h.FA9BEBE16AC7A534.idx  m3d.h.64D76EBDE9590286.idx  main.cc.A41EB787D3C84FD7.idx  main.cpp.ACC9E448E716C892.idx  mappings.h.FE78F280C55DB07D.idx  miniaudio.h.780424D564B34EE9.idx  monitor.c.3F4BA74F377F5A10.idx  msf_gif.h.B519F8B33B4B0A5F.idx  nsgl_context.m.7F9587DCA3CFB183.idx  null_init.c.966F62D487EF1EEF.idx  null_joystick.c.EEB19FD2B0C0266C.idx  null_joystick.h.41CFD003382A385C.idx  null_monitor.c.BDD5D3C66A8150DF.idx  null_platform.h.5B6F5F07B2F6CA6A.idx  null_window.c.83084B9B21AFE285.idx  osmesa_context.c.6CE9CCD8639AA68B.idx  par_shapes.h.EC1251785D2A9FC5.idx  platform.c.744CCB3A4902823B.idx  platform.h.5B1BFD72A0AC6ADE.idx  (+35 more)
src/: CMakeLists.txt  main.cc
